--- a/GAM300Engine/GAM300Engine.vcxproj.filters
+++ b/GAM300Engine/GAM300Engine.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="Src\Model\Skeleton.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
+    <ClCompile Include="Src\stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\application.h">
@@ -217,6 +220,9 @@
     </ClInclude>
     <ClInclude Include="Include\Model\Skeleton.h">
       <Filter>Header Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\stdafx.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
