--- a/GAM300Engine/imgui.ini
+++ b/GAM300Engine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=699,0
-Size=581,800
+Pos=740,0
+Size=540,800
 Collapsed=0
 DockId=0x00000003,0
 
@@ -40,11 +40,18 @@ Pos=0,0
 Size=1280,800
 Collapsed=0
 
+[Window][Scene]
+Size=1280,281
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1280,800 Split=X
-  DockNode  ID=0x00000002 Parent=0x09EF459F SizeRef=697,800 CentralNode=1
-  DockNode  ID=0x00000003 Parent=0x09EF459F SizeRef=581,800 Selected=0xE87781F4
-DockSpace   ID=0x3BC79352 Pos=84,109 Size=2544,1315 Split=Y
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,387
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,392 CentralNode=1
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1280,800 Split=Y
+  DockNode    ID=0x00000005 Parent=0x09EF459F SizeRef=1280,281 Selected=0xE192E354
+  DockNode    ID=0x00000006 Parent=0x09EF459F SizeRef=1280,517 Split=X
+    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=738,800 CentralNode=1
+    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=540,800 Selected=0xE87781F4
+DockSpace     ID=0x3BC79352 Pos=84,109 Size=2544,1315 Split=Y
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,387
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,392 CentralNode=1
 
