--- a/GAM300Engine/imgui.ini
+++ b/GAM300Engine/imgui.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=740,0
-Size=540,800
+Size=540,374
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Example: Custom rendering]
 Pos=60,60
@@ -45,13 +45,21 @@ Size=1280,281
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Profiler]
+Pos=740,376
+Size=540,424
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1280,800 Split=Y
-  DockNode    ID=0x00000005 Parent=0x09EF459F SizeRef=1280,281 Selected=0xE192E354
-  DockNode    ID=0x00000006 Parent=0x09EF459F SizeRef=1280,517 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=738,800 CentralNode=1
-    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=540,800 Selected=0xE87781F4
-DockSpace     ID=0x3BC79352 Pos=84,109 Size=2544,1315 Split=Y
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,387
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,392 CentralNode=1
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1280,800 Split=Y
+  DockNode      ID=0x00000005 Parent=0x09EF459F SizeRef=1280,281 Selected=0xE192E354
+  DockNode      ID=0x00000006 Parent=0x09EF459F SizeRef=1280,517 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=738,800 CentralNode=1
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=540,800 Split=Y Selected=0xE87781F4
+      DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=540,374 Selected=0xE87781F4
+      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=540,424 Selected=0x1E6EB881
+DockSpace       ID=0x3BC79352 Pos=84,109 Size=2544,1315 Split=Y
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,387
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,392 CentralNode=1
 
