--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ ManagedScripts/obj/ManagedScripts.csproj.nuget.dgspec.json
 ManagedScripts/obj/ManagedScripts.csproj.nuget.dgspec.json
 ManagedScripts/obj/ManagedScripts.csproj.nuget.g.props
 ManagedScripts/obj/project.assets.json
+*.ini
+GAM300Editor/imgui.ini
