--- a/GAM300Engine/GAM300Engine.vcxproj
+++ b/GAM300Engine/GAM300Engine.vcxproj
@@ -138,7 +138,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Libs;$(SolutionDir)Libs\Debug;$(SolutionDir)Libs\fmod;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;fmodL_vc.lib;fmodstudioL_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;fmodL_vc.lib;fmodstudioL_vc.lib;Jolt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /s /r /y /q "$(SolutionDir)Dependencies\dotnet\bin" "$(OutDir)"
@@ -217,6 +217,11 @@ xcopy /y /d "$(SolutionDir)Libs\fmod\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Src\Input\Input.cpp" />
     <ClCompile Include="Src\Animation\Pose.cpp" />
     <ClCompile Include="Src\camera\camera.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltDynamicBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltQueryShapeBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltStaticBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltTriggerComponent.cpp" />
     <ClCompile Include="Src\Logger\Logger.cpp" />
     <ClCompile Include="Src\memoryManager\memoryManager.cpp" />
     <ClCompile Include="Src\Model\ModelTransform.cpp" />
@@ -312,6 +317,11 @@ xcopy /y /d "$(SolutionDir)Libs\fmod\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Include\GraphicsResource\TextureInfo.h" />
     <ClInclude Include="Include\GraphicsResource\VertexInfo.h" />
     <ClInclude Include="Include\Input\Input.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltDynamicBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltQueryShapeBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltStaticBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltTriggerComponent.h" />
     <ClInclude Include="Include\memoryManager\memoryManager.h" />
     <ClInclude Include="Include\Model\ModelTransform.h" />
     <ClInclude Include="Include\Model\Skeleton.h" />
