--- a/GAM300Engine/GAM300Engine.vcxproj.filters
+++ b/GAM300Engine/GAM300Engine.vcxproj.filters
@@ -80,6 +80,11 @@
     <ClCompile Include="Src\components\GraphicsComponent.cpp" />
     <ClCompile Include="..\Shared_Libs\Color.cpp" />
     <ClCompile Include="..\Shared_Libs\Color8UNorm.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltDynamicBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltQueryShapeBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltStaticBodyComponent.cpp" />
+    <ClCompile Include="Src\JoltPhysics\Bodies\JoltTriggerComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared_Libs\MathCommon.h" />
@@ -187,6 +192,11 @@
     <ClInclude Include="Include\Rendering\RenderLayer.h" />
     <ClInclude Include="..\Shared_Libs\Color.h" />
     <ClInclude Include="..\Shared_Libs\Color8UNorm.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltDynamicBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltQueryShapeBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltStaticBodyComponent.h" />
+    <ClInclude Include="Include\JoltPhysics\Bodies\JoltTriggerComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Logger\Logger.h" />
