--- a/GAM300Engine/GAM300Engine.vcxproj
+++ b/GAM300Engine/GAM300Engine.vcxproj
@@ -200,6 +200,7 @@ xcopy /y /d "$(SolutionDir)Libs\rttr_core.dll" "$(OutDir)"</Command>
     <ClInclude Include="Include\Animation\Animation.h" />
     <ClInclude Include="Include\Animation\AnimationInfo.h" />
     <ClInclude Include="Include\Animation\AnimationLoader.h" />
+    <ClInclude Include="Include\components\animationComponent.h" />
     <ClInclude Include="Include\components\CompReflectionMacro.h" />
     <ClInclude Include="Include\components\DirLightComponent.h" />
     <ClInclude Include="Include\components\ParticleComponent.h" />
@@ -223,6 +224,7 @@ xcopy /y /d "$(SolutionDir)Libs\rttr_core.dll" "$(OutDir)"</Command>
     <ClCompile Include="Src\AI\TileEntity.cpp" />
     <ClCompile Include="Src\Animation\Animation.cpp" />
     <ClCompile Include="Src\Animation\AnimationLoader.cpp" />
+    <ClCompile Include="Src\components\animationComponent.cpp" />
     <ClCompile Include="Src\components\DirLightComponent.cpp" />
     <ClCompile Include="Src\components\PointLightComponent.cpp" />
     <ClCompile Include="Src\components\SpotLightComponent.cpp" />
