--- a/GAM300Engine/GAM300Engine.vcxproj.filters
+++ b/GAM300Engine/GAM300Engine.vcxproj.filters
@@ -96,7 +96,6 @@
     <ClCompile Include="Src\Physics\Interface\PhysicsInterface.cpp" />
     <ClCompile Include="Src\Rendering\ObjectPicking.cpp" />
     <ClCompile Include="Src\vulkanTools\Synchronization.cpp" />
-    <ClCompile Include="Src\Rendering\FontSystem.cpp" />
     <ClCompile Include="Include\Rendering\GraphicsManagerWrapperCalls.cpp" />
     <ClCompile Include="src\fmod_engine\AudioEngine.cpp" />
     <ClCompile Include="src\components\SoundInfo.cpp" />
@@ -134,6 +133,7 @@
     <ClCompile Include="Src\Rendering\MaterialFactory\PhongBlinnMaterial.cpp" />
     <ClCompile Include="Src\Rendering\MaterialFactory\PBRMaterial.cpp" />
     <ClCompile Include="Src\components\animationComponent.cpp" />
+    <ClCompile Include="Src\Animation\AnimationSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared_Libs\MathCommon.h" />
@@ -264,7 +264,6 @@
     <ClInclude Include="Include\vulkanTools\Synchronization.h" />
     <ClInclude Include="Include\AssetManagement\FontFactory.h" />
     <ClInclude Include="Include\Rendering\Batch2D.h" />
-    <ClInclude Include="Include\Rendering\FontSystem.h" />
     <ClInclude Include="Include\Rendering\GraphicsManagerWrapperCalls.h" />
     <ClInclude Include="Include\components\SoundInfo.h" />
     <ClInclude Include="Include\Rendering\UISpriteWrapper.h" />
@@ -310,6 +309,8 @@
     <ClInclude Include="Include\Rendering\Revamped\FrameBuffers\IrrandianceFBO.h" />
     <ClInclude Include="Include\Rendering\Revamped\FrameBuffers\PrefilteredFBO.h" />
     <ClInclude Include="Include\components\animationComponent.h" />
+    <ClInclude Include="Include\Animation\AnimationSystem.h" />
+    <ClInclude Include="Include\AssetManagement\AnimationFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Logger\Logger.h" />
